# AntaGL

./: AntaGLConfig.cmake.in  CMakeLists.txt  Doxyfile  README.md  TODOlist.md
c++/: AntaGLppConfig.cmake.in  CMakeLists.txt
c++/includes/: AntaGL.hpp  engine.hpp  sceneManager.hpp
c++/includes/objects/: object.hpp
c++/src/: engine.cpp  sceneManager.cpp
c++/src/objects/: object.cpp
docs/doxygen/html/: annotated.html  camera_8c.html  camera_8h.html  camera_8h_source.html  classes.html  dir_09e761304027c904456130627fd4dcf5.html  dir_2236feeadfe6ee73a99ec62178740e57.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_870889bcc6a36ec39fce2532ebcc02f1.html  dir_dcc2433f271bc0ade8ed04f5bb926d48.html  dir_fbec3c862cfd96f99cd8e38fbcffdfa6.html  doxygen_crawl.html  engine_8c.html  engine_8h.html  engine_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html  main_8c.html  menudata.js  object_8c.html  object_8h.html  object_8h_source.html  shaders_8h.html  shaders_8h_source.html  structcamera-members.html  structcamera.html  structengine-members.html  structengine.html  structmouse-members.html  structmouse.html  structobject-members.html  (+34 more)
docs/doxygen/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_4.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  (+28 more)
examples/basic/: CMakeLists.txt  README.md
examples/basic/src/: main.c
includes/: AntaGL.h  camera.h  engine.h  model.h  object.h  scene_manager.h  utils.h  vertex.h  vulkan_extension_wrapper.h  vulkan_wrapper.h  wayland.h  window.h
includes/surfaces/: surface.h  window.h
includes/surfaces/wayland/: wayland.h
includes/surfaces/windows_surface/: windows_surface.h
includes/vulkan/: shaders.h  vulkan_extension_wrapper.h  vulkan_wrapper.h
includes/wayland/: wayland.h
lib/cglm/: call.h  struct.h
shaders/: compile_linux.sh  shader.slang
src/: camera.c  engine.c  main.c  main.cpp  model.c  object.c  scene_manager.c  utils.c  vertex.c  vulkan_extension_wrapper.c  vulkan_wrapper.c  wayland.c
src/surfaces/: surface.c
src/surfaces/wayland/: wayland.c
src/surfaces/windows_surface/: windows_surface.c
src/vulkan/: vulkan_extension_wrapper.c  vulkan_wrapper.c
src/wayland/: wayland.c
